- Cell styles works and reload correctly from store, - Title state is added, - Debounce(), func for update store with delay, - Buttons border and background #bug with 'undefined' height/width in styles render, #bug with overflow solved

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -27,7 +27,7 @@ body{
 
 .excel {
   position: relative;
-  color: #777;
+  color: #333;
   //height: 100%;
   max-width: 100%;
 }
